--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ layout: default
         <!-- Profile Description -->
         <div id="profile_desc">
             <p>
-            	Aquil Hussain Nullam ac risus nibh. Donec adipiscing luctus tur
+            	Aquil Hussain is awesome
             </p>
 
         </div>
