--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ layout: default
 
          <div class="image-holder one" id="pic_prof_1" style="display:block">
 
-                <img class="head-image up circle" src="images/img/up.png" width="150" height="150" alt="" />
+                <!-- <img class="head-image up circle" src="images/img/up.png" width="150" height="150" alt="" />
                 <img class="head-image up-left circle" src="images/img/upleft.png" width="150" height="150" alt="" />
                 <img class="head-image left circle" src="images/img/left.png" width="150" height="150" alt="" />
                 <img class="head-image down-left circle" src="images/img/downleft.png" width="150" height="150" alt="" />
@@ -53,7 +53,8 @@ layout: default
                 <img class="head-image down-right circle" src="images/img/downright.png" width="150" height="150" alt="" />
                 <img class="head-image right circle" src="images/img/right.png" width="150" height="150" alt="" />
                 <img class="head-image up-right circle" src="images/img/upright.png" width="150" height="150" alt="" />
-                <img class="head-image front circle" src="images/img/front.png" width="150" height="150" alt="" />
+                <img class="head-image front circle" src="images/img/front.png" width="150" height="150" alt="" /> -->
+                <img class="head-image front circle" src="images/img/profile.jpg" width="150" height="150" alt="" />
 
         </div>
 
@@ -92,15 +93,15 @@ layout: default
             <a href="{{site.facebook}}"><i class="fa fa-facebook"></i></a>
             <a href="{{site.twitter}}"><i class="fa fa-twitter"></i></a>
             <a href="{{site.linkedin}}"><i class="fa fa-linkedin"></i></a>
-            <a href="{{site.dribbble}}"><i class="fa fa fa-dribbble"></i></a>
-            <a href="{{site.foursquare}}"><i class="fa fa-foursquare"></i></a>
+            <!--<a href="{{site.dribbble}}"><i class="fa fa fa-dribbble"></i></a>
+            <a href="{{site.foursquare}}"><i class="fa fa-foursquare"></i></a>-->
             <div class="clear"></div>
         </div>
         <!-- End Name -->
 
         <div id="profile_desc">
             <p>
-                <!-More Templates <a href="https://github.com/jekyller" target="_blank" title="jekyller" class="a-footer">Jekyller</a> and <a href="https://themeforest.net/item/flexyvcard-responsive-vcard-template-/7158750" target="_blank" title="flexycodes" class="a-footer">Flexycodex</a>->
+                <!--More Templates <a href="https://github.com/jekyller" target="_blank" title="jekyller" class="a-footer">Jekyller</a> and <a href="https://themeforest.net/item/flexyvcard-responsive-vcard-template-/7158750" target="_blank" title="flexycodes" class="a-footer">Flexycodex</a>-->
             </p>
 
         </div>
