--- a/index.html
+++ b/index.html
@@ -124,20 +124,20 @@ layout: default
             <i class="fa fa-user icon_menu icon_menu_active"></i>
         </li>
 
-        <!-- <li class="tabs-resume hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="resume">
+        <li class="tabs-resume hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="resume">
             <span class="tite-list">resume</span>
             <i class="fa fa-tasks icon_menu"></i>
-        </li> -->
+        </li>
 
         <!-- <li class="tabs-portfolio hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="portfolio">
             <span class="tite-list">portfolio</span>
             <i class="fa fa-briefcase icon_menu"></i>
-        </li>
+        </li> -->
 
         <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
             <span class="tite-list">blog</span>
             <i class="fa fa-bullhorn icon_menu"></i>
-        </li> -->
+        </li>
 
         <li class="tabs-contact hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="contact" style="margin-bottom: 48px !important;">
             <span class="tite-list">contact</span>
@@ -160,9 +160,9 @@ layout: default
 
 <!--
 {% include /portfolio.html %}
+-->
 
-
-{% include /blog.html %} -->
+{% include /blog.html %}
 
 {% include /contact.html %}
 
