--- a/index.html
+++ b/index.html
@@ -129,20 +129,22 @@ layout: default
             <i class="fa fa-tasks icon_menu"></i>
         </li>
 
-        <!-- <li class="tabs-portfolio hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="portfolio">
+        <li class="tabs-contact hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="contact" style="margin-bottom: 48px !important;">
+            <span class="tite-list">contact</span>
+            <i class="fa fa-envelope icon_menu"></i>
+        </li>
+
+         <li class="tabs-portfolio hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="portfolio">
             <span class="tite-list">portfolio</span>
             <i class="fa fa-briefcase icon_menu"></i>
-        </li> -->
+        </li>
 
         <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
             <span class="tite-list">blog</span>
             <i class="fa fa-bullhorn icon_menu"></i>
         </li>
 
-        <li class="tabs-contact hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="contact" style="margin-bottom: 48px !important;">
-            <span class="tite-list">contact</span>
-            <i class="fa fa-envelope icon_menu"></i>
-        </li>
+
 
         <a href="#" id="print"><i class="fa fa-print icon_print"></i> </a>
         <a href="#" id="downlowd"><i class="fa fa-download icon_print"></i> </a>
@@ -158,12 +160,13 @@ layout: default
 
 {% include /cv.html %}
 
+{% include /contact.html %}
+
 {% include /portfolio.html %}
 
 
 {% include /blog.html %}
 
-{% include /contact.html %}
 
 
 </div>
