--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ layout: default
             <i class="fa fa-envelope icon_menu"></i>
         </li>
 
-         <li class="tabs-portfolio hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="portfolio">
+         <!-- <li class="tabs-portfolio hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="portfolio">
             <span class="tite-list">portfolio</span>
             <i class="fa fa-briefcase icon_menu"></i>
         </li>
@@ -142,12 +142,9 @@ layout: default
         <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
             <span class="tite-list">blog</span>
             <i class="fa fa-bullhorn icon_menu"></i>
-        </li>
-
-
-
-        <a href="#" id="print"><i class="fa fa-print icon_print"></i> </a>
-        <a href="#" id="downlowd"><i class="fa fa-download icon_print"></i> </a>
+        </li> -->
+        <a href="#" id="print"><i class="fa fa-print icon_print"></i></a>
+        <a href="#" id="downlowd"><i class="fa fa-download icon_print"></i></a>
     </ul>
     <!-- /resp-tabs-list -->
 
@@ -156,16 +153,15 @@ layout: default
 <!-- resp-tabs-container -->
 <div class="resp-tabs-container">
 
-{% include /profile.html %}
+  {% include /profile.html %}
 
-{% include /cv.html %}
+  {% include /cv.html %}
 
-{% include /contact.html %}
+  {% include /contact.html %}
 
-{% include /portfolio.html %}
+  <!-- {% include /portfolio.html %}
 
-
-{% include /blog.html %}
+  {% include /blog.html %} -->
 
 
 
