comment out some tabs and open social media links in new tabs

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@ layout: default
          <div id="profile_social">
             <h6>My Social Profiles</h6>
 
-            <a href="{{site.facebook}}"><i class="fa fa-facebook"></i></a>
-            <a href="{{site.twitter}}"><i class="fa fa-twitter"></i></a>
-            <a href="{{site.linkedin}}"><i class="fa fa-linkedin"></i></a>
+            <a href="{{site.facebook}}" target=_blank><i class="fa fa-facebook"></i></a>
+            <a href="{{site.twitter}}" target=_blank><i class="fa fa-twitter"></i></a>
+            <a href="{{site.linkedin}}" target=_blank><i class="fa fa-linkedin"></i></a>
             <!--<a href="{{site.dribbble}}"><i class="fa fa fa-dribbble"></i></a>
             <a href="{{site.foursquare}}"><i class="fa fa-foursquare"></i></a>-->
             <div class="clear"></div>
@@ -143,8 +143,8 @@ layout: default
             <span class="tite-list">blog</span>
             <i class="fa fa-bullhorn icon_menu"></i>
         </li> -->
-        <a href="#" id="print"><i class="fa fa-print icon_print"></i></a>
-        <a href="#" id="downlowd"><i class="fa fa-download icon_print"></i></a>
+        <!-- <a href="#" id="print"><i class="fa fa-print icon_print"></i></a>
+        <a href="#" id="downlowd"><i class="fa fa-download icon_print"></i></a> -->
     </ul>
     <!-- /resp-tabs-list -->
 
