--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ layout: default
             <a href="{{site.facebook}}" target=_blank><i class="fa fa-facebook"></i></a>
             <a href="{{site.twitter}}" target=_blank><i class="fa fa-twitter"></i></a>
             <a href="{{site.linkedin}}" target=_blank><i class="fa fa-linkedin"></i></a>
+            <a href="{{site.github}}" target=_blank><i class="fa fa-github"></i></a>
             <!--<a href="{{site.dribbble}}"><i class="fa fa fa-dribbble"></i></a>
             <a href="{{site.foursquare}}"><i class="fa fa-foursquare"></i></a>-->
             <div class="clear"></div>
