--- a/index.html
+++ b/index.html
@@ -100,13 +100,6 @@ layout: default
         </div>
         <!-- End Name -->
 
-        <div id="profile_desc">
-            <p>
-                <!--More Templates <a href="https://github.com/jekyller" target="_blank" title="jekyller" class="a-footer">Jekyller</a> and <a href="https://themeforest.net/item/flexyvcard-responsive-vcard-template-/7158750" target="_blank" title="flexycodes" class="a-footer">Flexycodex</a>-->
-            </p>
-
-        </div>
-
     </div>
     <!-- End profile information -->
 
@@ -120,18 +113,18 @@ layout: default
 <div id="verticalTab">
 
     <ul class="resp-tabs-list">
-        <li class="tabs-profile hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a profile" data-tab-name="profile">
+        <li  title="Profile" class="tabs-profile hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a profile" data-tab-name="profile">
             <span class="tite-list">profile</span>
             <i class="fa fa-user icon_menu icon_menu_active"></i>
         </li>
 
-        <li class="tabs-resume hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="resume">
-            <span class="tite-list">resume</span>
+        <li  title="Resume" class="tabs-resume hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="resume">
+            <span class="tite-list" title="Resume">resume</span>
             <i class="fa fa-tasks icon_menu"></i>
         </li>
 
-        <li class="tabs-contact hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="contact" style="margin-bottom: 48px !important;">
-            <span class="tite-list">contact</span>
+        <li  title="Contact" class="tabs-contact hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="contact" style="margin-bottom: 48px !important;">
+            <span class="tite-list" title="Contact">contact</span>
             <i class="fa fa-envelope icon_menu"></i>
         </li>
 
